--- a/api_rust/Cargo.toml
+++ b/api_rust/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+mysql = "26.0.0"
+serde_json = "1.0.140"
+pyo3 = { version = "0.25.1", features = ["extension-module"] }
+inline-python = "0.14.4"
+serde = "1.0.219"
+mutex = "1.0.2"
